<resources>
    <string name="app_name">庄叶学习组</string>
    <string name="day04_2_bt1">查询(入缓存)</string>
    <string name="day04_2_bt2">查询(入内存)</string>
    <string name="day04_2_bt3">查询(runOnUiThread)</string>
    <string name="day04_bt1">网页源码查看器</string>
    <string name="day04_bt2">图片查看器</string>
    <string name="day04_bt3">Handler定时器</string>
    <string name="day04_bt4">新闻客户端</string>
    <string name="day04_3_bt1">Handler定时器</string>
    <string name="day04_3_bt2">Timer定时器</string>
    <string name="day04_3_bt3">Timer定时器，n秒后重复</string>
    <string name="day04_3_bt4">handler延迟更新ui</string>
</resources>
