<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/day04_bt_wangye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day04_bt1"
            />

        <Button
            android:id="@+id/day04_bt_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day04_bt2" />
        <Button
            android:id="@+id/day04_bt_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day04_bt3" />
        <Button
            android:id="@+id/day04_bt_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day04_bt4" />
    </LinearLayout>

</ScrollView>