<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/day04_2_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/day04_2_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="search"
            android:text="@string/day04_2_bt1" />

        <Button
            android:id="@+id/day04_2_bt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="search2"
            android:text="@string/day04_2_bt2" />
    </LinearLayout>

    <Button
        android:id="@+id/day04_2_bt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="search3"
        android:text="@string/day04_2_bt3" />

    <ImageView
        android:id="@+id/day04_2_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>